--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			body {background:#dedede;}
 			#app_container {
 				margin: 10px auto;
-				width: 400px;
+				/*width: 400px;*/
 				height: 100%;
 				background: #EDEDED;
 				border: 1px solid #CCC;
