Ooops changed CSS path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>StarCraft II Race Picker</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<!-- Bootstrap -->
-		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<!--I hate having to do this inline, but Android best practices state...-->
 		<style>
 			body {background:#dedede;}
