--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			}
 			#top_bar h3 {
 				color: #00B6FF;
+				text-shadow: 0px -1px 1px #111;
 				font-weight: normal;
 			}
 			#app_container {
@@ -41,12 +42,14 @@
 				-webkit-border-radius: 3px;
 				-moz-border-radius: 3px;
 				border-radius: 3px;
+				text-shadow: 0px 1px 1px #666;
 			}
 			.race_container.selected {
 				background: #DEDEDE;
 			}
 			.race_container.final_selection {
 				color: #00B6FF;
+				text-shadow: 0px -1px 1px #578CA2;
 			}
 			#randomiser {
 				font-size: 22px;
