--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
 				padding: 5px 5px 10px 10px;
 				height: 60px;
 				width: 100%;
-				background: transparent url(img/top_background.png) repeat-x;
+				background: #444444; /* Old browsers */
+				background: -moz-linear-gradient(top, #444444 0%, #212121 100%); /* FF3.6+ */
+				background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#444444), color-stop(100%,#212121)); /* Chrome,Safari4+ */
+				background: -webkit-linear-gradient(top, #444444 0%,#212121 100%); /* Chrome10+,Safari5.1+ */
+				background: -o-linear-gradient(top, #444444 0%,#212121 100%); /* Opera 11.10+ */
+				background: -ms-linear-gradient(top, #444444 0%,#212121 100%); /* IE10+ */
+				background: linear-gradient(to bottom, #444444 0%,#212121 100%); /* W3C */
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#212121',GradientType=0 ); /* IE6-9 */
+				/* Outer shadow */
+				-moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+				-webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+				box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
 			}
 			#top_bar h3 {
 				color: #00B6FF;
@@ -46,11 +57,14 @@
 				border-radius: 3px;
 				text-shadow: 0px -1px 1px #666;
 				/* Inner top shadow */
-				-moz-box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1);
-				-webkit-box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1);
-				box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1);
+				-moz-box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.15);
+				-webkit-box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.15);
+				box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.15);
 				/* Border bottom light */
 				border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+			}
+			.race_label {
+				font-size: 40px;
 			}
 			.race_container.final_selection {
 				color: #00B6FF;
