--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
 		<!--I hate having to do this inline, but Android best practices state...-->
 		<style>
 			body {
