--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
+		<link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-precomposed.png"/>
 		<!--I hate having to do this inline, but Android best practices state...-->
 		<style>
 			body {
