Changing file paths for icons

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
 		<!-- Icon -->
-		<link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-precomposed.png"/>
+		<link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png"/>
 		<!--I hate having to do this inline, but Android best practices state...-->
 		<style>
 			body {
